prusti-tests/tests/verify/fail/obligations/simple_leak.rs
use prusti_contracts::*;

obligation! {
    fn alloced(amount: usize, loc: usize);
}

#[trusted]
#[ensures(alloced(1, loc))]
fn alloc(loc: usize) {}

fn main() { //~ ERROR the function might leak instances of obligation
    alloc(64);
}
